@@ -1,10 +1,14 @@
 package com.guilhermeneto.crud_spring.services;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
+import com.guilhermeneto.crud_spring.dtos.ParceiroPageDto;
 import com.guilhermeneto.crud_spring.dtos.ParceiroRequestDto;
 import com.guilhermeneto.crud_spring.dtos.ParceiroResponseDto;
 import com.guilhermeneto.crud_spring.dtos.mapper.ParceiroMapper;
@@ -13,32 +17,47 @@ import com.guilhermeneto.crud_spring.models.Parceiros;
 import com.guilhermeneto.crud_spring.repository.ParceirosRepository;
 
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.Max;
 import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Positive;
+import jakarta.validation.constraints.PositiveOrZero;
 
 @Service
 @Validated
 public class ParceirosService {
-    
+
     private final ParceirosRepository parceiroRepository;
     private final ParceiroMapper parceiroMapper;
-    
+
     public ParceirosService(ParceirosRepository parceiroRepository, ParceiroMapper parceiroMapper) {
         this.parceiroRepository = parceiroRepository;
         this.parceiroMapper = parceiroMapper;
     }
 
-    public List<ParceiroResponseDto> getParceiros() {
-        List<Parceiros> parceiros =  parceiroRepository.findAll();
-        return parceiros.stream()
-        .map(parceiroMapper::toDto)
-        .toList();
+    public ParceiroPageDto getParceiros(@PositiveOrZero int page, @Positive @Max(20) int pageSize) {
+        Page<Parceiros> pageParceiro = parceiroRepository.findAll(PageRequest.of(page, pageSize));
+        List<ParceiroResponseDto> parceiros = pageParceiro.getContent().stream()
+                .map(parceiroMapper::toDto)
+                .collect(Collectors.toList());
+
+        return new ParceiroPageDto(parceiros, pageParceiro.getTotalElements(), pageParceiro.getTotalPages());
     }
+
+    /*
+     * public List<ParceiroResponseDto> getParceiros() {
+     * List<Parceiros> parceiros = parceiroRepository.findAll();
+     * return parceiros.stream()
+     * .map(parceiroMapper::toDto)
+     * .toList();
+     * }
+     */
 
     public ParceiroResponseDto getOne(@Valid Integer id) {
         return parceiroRepository.findById(id).map(parceiroMapper::toDto)
-        .orElseThrow(() -> new RecordNotFound(id));/*
-                .map(recordFound -> ResponseEntity.ok().body(recordFound))
-                .orElse(ResponseEntity.notFound().build());*/
+                .orElseThrow(() -> new RecordNotFound(id));/*
+                                                            * .map(recordFound -> ResponseEntity.ok().body(recordFound))
+                                                            * .orElse(ResponseEntity.notFound().build());
+                                                            */
     }
 
     public ParceiroResponseDto save(@Valid @NotNull ParceiroRequestDto parceiroDto) {
@@ -46,9 +65,9 @@ public class ParceirosService {
         Parceiros entity = parceiroMapper.toEntity(parceiroDto);
 
         if (entity.getContatos() != null) {
-                entity.getContatos().forEach(contato -> contato.setParceiros(entity));
-            }
-            
+            entity.getContatos().forEach(contato -> contato.setParceiros(entity));
+        }
+
         return parceiroMapper.toDto(parceiroRepository.save(entity));
         /* return ResponseEntity.status(201).body(parceiroRepository.save(parceiro)); */
     }
@@ -56,12 +75,21 @@ public class ParceirosService {
     public ParceiroResponseDto update(Integer id, @Valid @NotNull ParceiroRequestDto parceiroDto) {
         return parceiroRepository.findById(id)
                 .map(recordFound -> {
-                    Parceiros parceiros = parceiroMapper.toEntity(parceiroDto);
+                    // Parceiros parceiros = parceiroMapper.toEntity(parceiroDto);
                     recordFound.setName(parceiroDto.name());
                     recordFound.setPosition(parceiroDto.position());
                     recordFound.setSymbol(parceiroDto.symbol());
                     recordFound.setWeight(parceiroDto.weight());
-                    recordFound.setContatos(parceiros.getContatos());
+                    // recordFound.setContatos(parceiros.getContatos());
+
+                    Parceiros tempEntity = parceiroMapper.toEntity(parceiroDto);
+                    recordFound.getContatos().clear(); // Limpa a lista existente monitorada pelo JPA
+                    if (tempEntity.getContatos() != null) {
+                        tempEntity.getContatos().forEach(contato -> {
+                            contato.setParceiros(recordFound);
+                            recordFound.getContatos().add(contato);
+                        });
+                    }
 
                     return parceiroRepository.save(recordFound);
                 }).map(parceiroMapper::toDto).orElseThrow(() -> new RecordNotFound(id));
@@ -69,7 +97,7 @@ public class ParceirosService {
 
     public void delete(@Valid Integer id) {
         parceiroRepository.delete(parceiroRepository.findById(id)
-            .orElseThrow(() -> new RecordNotFound(id)));
+                .orElseThrow(() -> new RecordNotFound(id)));
     }
 
 }
